# kimchi_strategy

./: .gitignore  README.md  bband.py  binance.py  data_merging.py  main.py  pyproject.toml  upbit.py
