[project]
name = "theo-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "requests>=2.32.3",
    "ruff>=0.9.4",
    "seaborn>=0.13.2",
]
