[project]
name = "theo-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numba>=0.61.0",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "requests>=2.32.3",
    "ruff>=0.9.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
